--- a/index.html
+++ b/index.html
@@ -32,10 +32,6 @@
       top: 0;
       right: 0;
       bottom: 0;
-      /* transform: scaleX(-1); */
-      /* &.selfie {
-        transform: scale(-1, 1);
-      } */
     }
     .output_canvas {
       position: absolute;
@@ -45,6 +41,10 @@
       top: 0;
       z-index: 10;
       background-color:rgba(255,255,255,0.1);
+    }
+    .input_video, .output_canvas {
+      transform: scaleX(-1);
+      filter: FlipH;
     }
   </style>
 </head>
